--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
             </p>
             <a href="https://wa.me/6285742461713" class="btn">Pelajari Lebih Lanjut</a>
         </div>
-        <div class="foto"><img src="f:\Landing page\20944033.jpg"></div>
+        <div class="foto"><img src="20944033.jpg"></div>
     </section>
 </body>
 <footer>
     <p>© 2026 LangkahAcademy. All Rights Reserved.</p>
 </footer>
+
 </html>
